--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ body {
     <h1><center>BCE/CE and BC/AD</center></h1>
     <h3><center>Overview</center></h3>
     <hr style="border-top: dotted 10px;"/>
+    <p><a href="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg">
+    <img src="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg" alt="Timeline" width="1000" height="350">
+    <hr style="border-top: dotted 10px;"/>
     <font face="Cursive" size="5px" color="#FF7A59"><h3>BC/AD and BCE/CE help us place events in chronological order. BC and BCE are the same, and AD/CE are also the same.</h3></font>
     <table style="width:100%">
   <tr>
