--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@ table, th, td {
   border:3px solid black;
 }
 
-
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 body {
     background-color: cyan;
