--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@ body {
     <h3>• If both numbers are in AD/BCE:
             Take the number of the more recent event, (the larger number) and SUBTRACT the older 
         event (the smaller number)
-        Example: 2010 - 1910 = 100 Years</h3>
-
+      Example: 2010 - 1910 = 100 Years</h3>
+    <hr>
+    <a href="https://github.com/jcastelino21/jcastelino21.github.io">Link to this website's drepository.</a>
+    
 
 </body>
 </html>
