--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@ table, th, td {
   border:3px solid black;
 }
 
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
 img {
   display: block;
   margin-left: auto;
@@ -78,7 +99,7 @@ body {
             Take the number of the more recent event, (the larger number) and SUBTRACT the older 
         event (the smaller number)
       Example: 2010 - 1910 = 100 Years</h3>
-    <hr>
+    <hr style="border-top: dotted 10px;"/>
     <a href="https://github.com/jcastelino21/jcastelino21.github.io">Link to this website's drepository.</a>
     
 
