--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@ a:link {
   background-color: transparent;
   text-decoration: none;
 }
+  
 a:visited {
   color: pink;
   background-color: transparent;
   text-decoration: none;
 }
+  
 a:hover {
   color: red;
   background-color: transparent;
   text-decoration: underline;
 }
+  
 a:active {
   color: yellow;
   background-color: transparent;
@@ -100,7 +103,7 @@ body {
         event (the smaller number)
       Example: 2010 - 1910 = 100 Years</h3>
     <hr style="border-top: dotted 10px;"/>
-    <a href="https://github.com/jcastelino21/jcastelino21.github.io">Link to this website's drepository.</a>
+    <a href="https://github.com/jcastelino21/jcastelino21.github.io">Link to this website's depository.</a>
     
 
 </body>
