--- a/index.html
+++ b/index.html
@@ -5,26 +5,11 @@ table, th, td {
   border:3px solid black;
 }
 
-a:link {
-  color: green;
-  background-color: transparent;
-  text-decoration: none;
-}
-a:visited {
-  color: pink;
-  background-color: transparent;
-  text-decoration: none;
-}
-a:hover {
-  color: red;
-  background-color: transparent;
-  text-decoration: underline;
-}
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: underline;
-}
+a {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
 img {
   display: block;
   margin-left: auto;
