--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   }
+  
 img {
   display: block;
   margin-left: auto;
@@ -84,7 +85,9 @@ body {
         event (the smaller number)
       Example: 2010 - 1910 = 100 Years</h3>
     <hr style="border-top: dotted 10px;"/>
-    <a href="https://github.com/jcastelino21/jcastelino21.github.io">Link to this website's depository.</a>
+    <a href="https://github.com/jcastelino21/jcastelino21.github.io/" target="_blank">Link to this website's repository</a>
+    <br>
+    <a href="https://github.com/jcastelino21" target="_blank">Link to this my github account</a>
     
 
 </body>
