--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body {
     <h3><center>Overview</center></h3>
     <hr style="border-top: dotted 10px;"/>
     <p><a href="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg">
+    <a href="https://github.com/jcastelino21" target="_blank">Link to this my github account</a>
     <img src="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg" alt="Timeline" width="1000" height="350">
       </a></p>
       <hr style="border-top: dotted 10px;"/>
