--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
     <h3><center>Overview</center></h3>
     <hr style="border-top: dotted 10px;"/>
     <img src="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg" alt="Timeline" width="1000" height="350">
-    <a href="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg" target="_blank">Timeline</a>
+    <a href="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg" target="_blank"><p style="text-align:center">Timeline</a>
       <hr style="border-top: dotted 10px;"/>
     <font face="Cursive" size="5px" color="#FF7A59"><h3>BC/AD and BCE/CE help us place events in chronological order. BC and BCE are the same, and AD/CE are also the same.</h3></font>
     <table style="width:100%">
