--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
     <hr style="border-top: dotted 10px;"/>
     <a href="https://github.com/jcastelino21/jcastelino21.github.io/" target="_blank">Link to this website's repository</a>
     <br>
-    <a href="https://github.com/jcastelino21" target="_blank">Link to this my github account</a>
+    <a href="https://github.com/jcastelino21" target="_blank">Link to my github account</a>
     
 
 </body>
