--- a/index.html
+++ b/index.html
@@ -1,93 +1,64 @@
-<!doctype html> 
-<html lang="en">
-<style>
-table, th, td {
-  border:3px solid black;
-}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-a {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  }
-  
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-body {
-    background-color: cyan;
-</style>
-<font face="Cursive" size="5px" color="#FF7A59">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-    <title>BC/AD and BCE/CE</title>
+  <meta charset="utf-8">
+  <title>Joshua Castelino</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
-    <h1><center>BCE/CE and BC/AD</center></h1>
-    <h3><center>Overview</center></h3>
-    <hr style="border-top: dotted 10px;"/>
-    <img src="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg" alt="Timeline" width="1000" height="350">
-    <a href="https://raw.githubusercontent.com/jcastelino21/jcastelino21.github.io/main/bcadbcebce.jpg" target="_blank"><p style="text-align:center">Timeline</a>
-      <hr style="border-top: dotted 10px;"/>
-    <font face="Cursive" size="5px" color="#FF7A59"><h3>BC/AD and BCE/CE help us place events in chronological order. BC and BCE are the same, and AD/CE are also the same.</h3></font>
-    <table style="width:100%">
-  <tr>
-    <th>BC/AD</th>
-    <th>BCE/CE</th>
-  </tr>
-  <tr>
-      <td>BC stands for 'Before Christ'</td>
-      <td>BCE stands for 'Before Common Era'</td>
-  </tr>
-  <tr>
-    <td>AD stands for 'Anno Domini' ('Year of the Lord')</td>
-    <td>CE stands for 'Common Era'</td>
-  </tr>
-  <tr>
-      <td>Timeline is based around the brith of Jesus Christ</td>
-      <td>Timeline is secular, which means it is not based on religion</td>
-  </tr>
-  <tr>
-      <td>Current years are labeled as AD</td>
-      <td>We live in the Common Era</td>
-  </tr>
-</table>
-    <h2><center><u>Key Points</u></center></h2>
-    <h3>• The year "Zero" does not exist</h3>
-    <br>
-    <h3>• For BCE/BC: The higher the number, the EARLIER the event happened.
-        Example: The year 1000 BCE happened BEFORE the year 500 BCE</h3>
-    <br>
-    <h3>• For AD/BCE: The higher the number, the LATER the event happened.
-        Example: The year 2000 CE happened AFTER the year 1000 CE</h3>
-    <br>
-    <h3>• When discussing modern times in the common era, 'ce' is often assumed
-        Example: The year 2018 can be simplified to just 2018</h3>
-    <br>
-    <hr style="border-top: dotted 10px;"/>
-    <h2><center><u>How To Determine Age</u></center></h2>
-    <h3>• If both numbers are in BCE/BC:
-            Take the number of the older event, (the larger number) and SUBTRACT the more recent
-            event (the smaller number).
-        Example: 545 BCE - 445 BCE = 100 Years</h3>
-    <br>
-    <h3>• If both numbers are in AD/BCE:
-            Take the number of the more recent event, (the larger number) and SUBTRACT the older 
-        event (the smaller number)
-        Example: 2010 - 1910 = 100 Years</h3>
-    <br>
-    <h3>• If both numbers are in AD/BCE:
-            Take the number of the more recent event, (the larger number) and SUBTRACT the older 
-        event (the smaller number)
-      Example: 2010 - 1910 = 100 Years</h3>
-    <hr style="border-top: dotted 10px;"/>
-    <a href="https://github.com/jcastelino21/jcastelino21.github.io/" target="_blank">Link to this website's repository</a>
-    <br>
-    <a href="https://github.com/jcastelino21" target="_blank">Link to my github account</a>
-    
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>Welcome To </h1>
+    <h2><strong>The <span class="pro">NBA </span>Big Board.</strong></h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/bryant.png" alt="mountain-img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/joshua.png" alt="picture of joshua" height="100px" width="100px">
+      <h2>Hello!</h2>
+      <p class="intro">My name is Joshua Castelino. I am a 6th grader at Carnage Middle. I was born in <a href="https://en.wikipedia.org/wiki/Cary,_North_Carolina">Cary, North Carolina.</a> Currently, I live in <a
+          href="https://en.wikipedia.org/wiki/Morrisville,_North_Carolina">Morrisville North Carolina.</a> I love playing Basketball. I am the head programmer for the NBA Big Board</a></p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>Hello!</h3>
+        <div class="skill-row">
+          
+      <p>My name is Abhinav Basava. I am a 5th grader at Green Hope Elementary. I was born in New York. Currently, I live in <a
+          href="https://en.wikipedia.org/wiki/Morrisville,_North_Carolina">Morrisvile, North Carolina.</a> I love playing and azalyzing Basketball. I am the head researcher for the NBA Big Board.</p>
+      <img class="chess"src="images/stats.png" alt="chess">
+      <h3>Statistics</h3>
+      <p>In this page, you will find statistics about players and teams. Click the button above to access this page!</p>
+      <img class="coding"src="images/coding.webp" alt="programming">
+      <h3>Programming/Web Developing</h3>
+      <p>I started programming 2016. I am a fluent python and html/css programmer. I started building websites in 2018.</p>
+      <img class="soccer"src="images/soccer.webp" alt="soccer">
+      <h3>Soccer</h3>
+      <p>I started playing soccer in 2015. I play recreationally at FC Cary.</p>
+    </div>
+  </div>
+
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>Click on the link below to contact me.</h3>
+    <p class="contact-message">joshuacastelino@outlook.com</p>
+    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+  </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <p class="copyright">© 2021 Joshua Castelino.</p>
+
+  </div>
 
 </body>
+
 </html>
